--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
     <section>
         <div class="container">
             <div class="navbar">
-                <div>
+                <div class="logo">
                     <img src="./images/netflix-logo.svg">
                 </div>
                 <div>
